# enterprise-rag-platform

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  eval.yml
docs/: architecture.md  cost-model.md  evaluation.md  security.md
infra/: README.md
infra/azure/: main.bicep
infra/terraform/: main.tf
mlops/: README.md  config.yml
mlops/datasets/: golden_qa.json  manage_golden_dataset.py  ragas_eval.json
mlops/experiments/: track_retrieval.py
mlops/pipelines/: conda.yml  evaluation_pipeline.py
scripts/: ingest_cv.ps1  start_qdrant.ps1
src/: config.py  types.py
src/api/: health.py  main.py  openai.py  router.py
src/auth/: middleware.py  models.py
src/evaluation/: evaluator.py
src/ingestion/: chunking.py  embeddings.py  github.py  loaders.py
src/orchestration/: caching.py  cost.py  llm.py  prompts.py  rag.py
src/retrieval/: keyword.py  reranking.py  service.py  vector.py
tests/api/: test_health.py
